Structure and general fixes

--- a/notebooks/tests/plot_test.ipynb
+++ b/notebooks/tests/plot_test.ipynb
@@ -21,7 +21,17 @@
     "from python_package.Sudoku import Sudoku\n",
     "\n",
     "sudoku = Sudoku(grid_size=3,num_missing_cells=40)\n",
-    "sudoku.plot()"
+    "sudoku.alt_plot()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sudoku = Sudoku(grid_size=1,num_missing_cells=4)\n",
+    "sudoku.alt_plot()"
    ]
   }
  ],
