--- a/notebooks/demos/4x4DataDEMO.ipynb
+++ b/notebooks/demos/4x4DataDEMO.ipynb
@@ -13,7 +13,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We generate $100,000$ random puzzles from a range of $1-8$ "
+    "We generate $100,000$ random puzzles from a range of $1-8$ missing cells."
    ]
   },
   {
@@ -39,7 +39,7 @@
    "source": [
     "# Example use of QuantumDataAnalysis class\n",
     "gen_data = GenData(grid_size=2, num_puzzles=100000)\n",
-    "data_df = gen_data.generate_data(num_cells_range = (1,16))\n",
+    "data_df = gen_data.generate_data(num_cells_range = (1,8))\n",
     "analysis = QuantumDataAnalysis(df=data_df)"
    ]
   },
@@ -117,26 +117,8 @@
     }
    ],
    "source": [
-    "# Plot distributions\n",
+    "# Plot correlation heatmap and distributions\n",
     "analysis.plot_distributions_pdf()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Perform t-tests\n",
-    "# analysis.plot_interactive_correlation_heatmap()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "A. Forrow and J. R. Schmitt, Approaching the minimum number of clues Sudoku problem via the polynomial\n",
-    "method, 2013."
    ]
   }
  ],
