Updated files and README

--- a/notebooks/demos/4x4SudokuDEMO.ipynb
+++ b/notebooks/demos/4x4SudokuDEMO.ipynb
@@ -88,7 +88,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "With a custom pattern encoding we lower the resources, but up to an upper bound of the size of the problem:"
+    "With pattern encoding we lower the resources, but up to an upper bound of the size of the problem:"
    ]
   },
   {
@@ -121,11 +121,6 @@
     "\n",
     "# Number of qubits || Number of MCX gates || Total number of gates"
    ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": []
   }
  ],
  "metadata": {
