Fixed small bugs

--- a/notebooks/9x9SudokuDEMO.ipynb
+++ b/notebooks/9x9SudokuDEMO.ipynb
@@ -2,11 +2,11 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "from python_package.Sudoku import Sudoku"
+    "from sudoku_nisq.sudoku import Sudoku"
    ]
   },
   {
