--- a/notebooks/DataDEMO.ipynb
+++ b/notebooks/DataDEMO.ipynb
@@ -11,11 +11,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "from python_package.data_generation import GenData, QuantumDataAnalysis"
+    "from sudoku_nisq.data_generation import GenData, QuantumDataAnalysis"
    ]
   },
   {
