--- a/notebooks/IBMQBackendDEMO.ipynb
+++ b/notebooks/IBMQBackendDEMO.ipynb
@@ -90,11 +90,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "from python_package.Sudoku import Sudoku\n",
+    "from sudoku_nisq.sudoku import Sudoku\n",
     "\n",
     "sudoku = Sudoku(grid_size=2,num_missing_cells=3)"
    ]
