--- a/notebooks/QuantumCircuitDEMO.ipynb
+++ b/notebooks/QuantumCircuitDEMO.ipynb
@@ -49,7 +49,7 @@
    "outputs": [],
    "source": [
     "# Import the necessary library\n",
-    "from python_package.quantum import ExactCoverQuantumSolver"
+    "from sudoku_nisq.quantum import ExactCoverQuantumSolver"
    ]
   },
   {
