Modified conflicting name and corrected custom board initialization

--- a/notebooks/4x4SudokuDEMO copy 2.ipynb
+++ b/notebooks/4x4SudokuDEMO copy 2.ipynb
@@ -2,11 +2,11 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "from sudoku_nisq.sudoku import Sudoku"
+    "from sudoku_nisq.q_sudoku import Sudoku"
    ]
   },
   {
