--- a/notebooks/9x9SudokuDEMO.ipynb
+++ b/notebooks/9x9SudokuDEMO.ipynb
@@ -6,7 +6,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from sudoku_nisq.sudoku import Sudoku"
+    "from sudoku_nisq.q_sudoku import Sudoku"
    ]
   },
   {
