--- a/notebooks/IBMQBackendDEMO.ipynb
+++ b/notebooks/IBMQBackendDEMO.ipynb
@@ -94,7 +94,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from sudoku_nisq.sudoku import Sudoku\n",
+    "from sudoku_nisq.q_sudoku import Sudoku\n",
     "\n",
     "sudoku = Sudoku(grid_size=2,num_missing_cells=3)"
    ]
