--- a/notebooks/QuantumCircuitDEMO.ipynb
+++ b/notebooks/QuantumCircuitDEMO.ipynb
@@ -44,12 +44,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Import the necessary library\n",
-    "from sudoku_nisq.quantum import ExactCoverQuantumSolver"
+    "from sudoku_nisq import ExactCoverQuantumSolver"
    ]
   },
   {
