--- a/notebooks/4x4SudokuDEMO.ipynb
+++ b/notebooks/4x4SudokuDEMO.ipynb
@@ -52,7 +52,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "sudoku._init_quantum(simple=True,pattern=False)"
+    "sudoku.init_quantum(simple=True,pattern=False)"
    ]
   },
   {
@@ -97,7 +97,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "sudoku._init_quantum(simple=False,pattern=True)"
+    "sudoku.init_quantum(simple=False,pattern=True)"
    ]
   },
   {
