--- a/notebooks/IBMQBackendDEMO.ipynb
+++ b/notebooks/IBMQBackendDEMO.ipynb
@@ -144,7 +144,7 @@
     }
    ],
    "source": [
-    "sudoku._init_quantum(simple=False,pattern=True)\n",
+    "sudoku.init_quantum(simple=False,pattern=True)\n",
     "\n",
     "sudoku.quantum.find_resources()\n",
     "\n",
