--- a/notebooks/4x4SudokuDEMO copy 3.ipynb
+++ b/notebooks/4x4SudokuDEMO copy 3.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -28,7 +28,7 @@
        "<Figure size 600x600 with 1 Axes>"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -50,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -75,7 +75,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -84,7 +84,7 @@
        "(37, 375, 432)"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -164,7 +164,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -173,7 +173,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -182,7 +182,7 @@
        "(19, 63, 76)"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -195,16 +195,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[H S[0]; H S[1]; X anc; CnX S[0], U_14[0]; H anc; CnX S[0], U_11[0]; CnX S[0], U_4[0]; CnX S[0], U_1[0], U_10[0], U_11[0], U_12[0], U_13[0], U_14[0], U_15[0]; CnX S[0], U_1[0], U_10[0], U_11[0], U_12[0], U_13[0], U_14[0]; CnX S[0], U_1[0], U_10[0], U_11[0], U_12[0], U_13[0]; CnX S[0], U_1[0], U_10[0], U_11[0], U_12[0]; CnX S[0], U_1[0], U_10[0], U_11[0]; CnX S[1], U_12[0]; CnX S[0], U_1[0], U_10[0]; CnX S[1], U_8[0]; CnX S[0], U_1[0]; CnX S[1], U_5[0]; CnX S[0], U_13[0]; CnX S[1], U_2[0]; CnX S[0], U_9[0]; CnX S[0], U_6[0]; CnX S[0], U_3[0]; CnX S[0], U_15[0]; CnX S[0], U_10[0]; CnX S[0], U_7[0]; CnX S[0], U_0[0]; CnX U_0[0], U_1[0], U_2[0], U_3[0], U_4[0], U_5[0], U_6[0], U_7[0], U_8[0], U_9[0], U_10[0], U_11[0], U_12[0], U_13[0], U_14[0], U_15[0], anc; CnX S[0], U_0[0]; CnX S[1], U_2[0]; CnX S[0], U_7[0]; CnX S[1], U_5[0]; CnX S[0], U_10[0]; CnX S[1], U_8[0]; CnX S[0], U_15[0]; CnX S[1], U_12[0]; CnX S[0], U_3[0]; H S[1]; CnX S[0], U_6[0]; X S[1]; CnX S[0], U_9[0]; CnX S[0], U_13[0]; CnX S[0], U_1[0]; CnX S[0], U_1[0], U_10[0]; CnX S[0], U_1[0], U_10[0], U_11[0]; CnX S[0], U_1[0], U_10[0], U_11[0], U_12[0]; CnX S[0], U_1[0], U_10[0], U_11[0], U_12[0], U_13[0]; CnX S[0], U_1[0], U_10[0], U_11[0], U_12[0], U_13[0], U_14[0]; CnX S[0], U_1[0], U_10[0], U_11[0], U_12[0], U_13[0], U_14[0], U_15[0]; CnX S[0], U_4[0]; CnX S[0], U_11[0]; CnX S[0], U_14[0]; H S[0]; X S[0]; CnZ S[0], S[1]; X S[0]; X S[1]; H S[0]; H S[1]; Measure S[0] --> c[0]; Measure S[1] --> c[1]; ]"
+       "[H S[0]; H S[1]; X anc; CnX S[0], U_12[0]; CnX S[1], U_14[0]; H anc; CnX S[0], U_9[0]; CnX S[1], U_8[0]; CnX S[0], U_6[0]; CnX S[1], U_5[0]; CnX S[0], U_2[0]; CnX S[1], U_1[0], U_10[0], U_11[0], U_12[0], U_13[0], U_14[0], U_15[0]; CnX S[1], U_1[0], U_10[0], U_11[0], U_12[0], U_13[0], U_14[0]; CnX S[1], U_1[0], U_10[0], U_11[0], U_12[0], U_13[0]; CnX S[1], U_1[0], U_10[0], U_11[0], U_12[0]; CnX S[1], U_1[0], U_10[0], U_11[0]; CnX S[1], U_1[0], U_10[0]; CnX S[1], U_1[0]; CnX S[1], U_13[0]; CnX S[1], U_11[0]; CnX S[1], U_4[0]; CnX S[1], U_0[0]; CnX S[1], U_15[0]; CnX S[1], U_10[0]; CnX S[1], U_7[0]; CnX S[1], U_3[0]; CnX U_0[0], U_1[0], U_2[0], U_3[0], U_4[0], U_5[0], U_6[0], U_7[0], U_8[0], U_9[0], U_10[0], U_11[0], U_12[0], U_13[0], U_14[0], U_15[0], anc; CnX S[0], U_2[0]; CnX S[1], U_3[0]; CnX S[0], U_6[0]; CnX S[1], U_7[0]; CnX S[0], U_9[0]; CnX S[1], U_10[0]; CnX S[1], U_15[0]; CnX S[1], U_0[0]; CnX S[1], U_4[0]; CnX S[1], U_11[0]; CnX S[1], U_13[0]; CnX S[1], U_1[0]; CnX S[1], U_1[0], U_10[0]; CnX S[1], U_1[0], U_10[0], U_11[0]; CnX S[1], U_1[0], U_10[0], U_11[0], U_12[0]; CnX S[1], U_1[0], U_10[0], U_11[0], U_12[0], U_13[0]; CnX S[1], U_1[0], U_10[0], U_11[0], U_12[0], U_13[0], U_14[0]; CnX S[1], U_1[0], U_10[0], U_11[0], U_12[0], U_13[0], U_14[0], U_15[0]; CnX S[0], U_12[0]; CnX S[1], U_5[0]; H S[0]; CnX S[1], U_8[0]; X S[0]; CnX S[1], U_14[0]; H S[1]; X S[1]; CnZ S[0], S[1]; X S[0]; X S[1]; H S[0]; H S[1]; Measure S[0] --> c[0]; Measure S[1] --> c[1]; ]"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -370,7 +370,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
