--- a/notebooks/4x4SudokuDEMO copy 2.ipynb
+++ b/notebooks/4x4SudokuDEMO copy 2.ipynb
@@ -354,11 +354,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "ibm_token = \"7a854fadb9bfc4d4d7202c44bb10598d64945d5b97deabecd8ddc9eaeb574b7e2ff86765f0c8079fb470a78d37aa2e872684355d720451a5fb41e82d1c1c2789\"\n",
+    "ibm_token = \"\"\n",
     "\n",
     "from qiskit_ibm_runtime import QiskitRuntimeService\n",
     "from pytket.extensions.qiskit import IBMQBackend\n",
